--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,6 +38,9 @@
 	--card-background: #0B1020;
 	--large-card-border-color: #1d57b3;
 
+	--table-row-evens-background-color: #0b0f1f;
+	--table-row-odds-background-color: #101833;
+
 	--max-paragraph-width: 600px;
 
 	--small-dialog-header-bar-height: 46px;
