rename a few interaction type options
and move `interactionTypeToIcon` Map to mapper service

--- a/src/app/components/interaction-dialog/interaction-dialog.component.html
+++ b/src/app/components/interaction-dialog/interaction-dialog.component.html
@@ -30,12 +30,12 @@
 				<mat-label>Type of interaction</mat-label>
 				<select formControlName="type" required matNativeControl>
 					<option [value]="typeOptions.PhoneCall">Phone Call</option>
-					<option [value]="typeOptions.Texting">Text</option>
+					<option [value]="typeOptions.Text">Text</option>
 					<option [value]="typeOptions.Email">Email</option>
 					<option [value]="typeOptions.InPerson">In Person</option>
 					<option [value]="typeOptions.VideoCall">Video Call</option>
-					<option [value]="typeOptions.OnlineGaming">Online Gaming</option>
-					<option [value]="typeOptions.SnailMail">Physical Mail</option>
+					<option [value]="typeOptions.GameChat">Game Chat</option>
+					<option [value]="typeOptions.PostalMail">Postal Mail</option>
 					<option [value]="typeOptions.SocialMedia">Social Media</option>
 					<option [value]="typeOptions.VoiceMail">Voice Mail</option>
 					<option [value]="typeOptions.Other">Other</option>
