all add/edit relationship logic in RelationshipService
Though most of the business logic of adding/editing relationships
was already in the RelationshipService, it didn't handle dialog
creation and result processing.

RelationshipService now handles the dialog. This enables the
add/edit relationship dialog to be opened from multiple
components without code duplication. It also abstracts away
the format of the add/edit relationship flow - the component
no longer needs to know it's dealing with a dialog.

The RelationshipService's existing logic was almost entirely refactored
to increase consistency and separation of concerns.

Some functions moved and one added to the new
RelationshipUtilitiesService, so these simple functions can
be used in more services without causing circular dependencies.

The dialog result format was also updated to make it easier to work with
while increasing type safety.

--- a/src/app/components/relationship-dialog/relationship-dialog.component.html
+++ b/src/app/components/relationship-dialog/relationship-dialog.component.html
@@ -95,7 +95,7 @@
 			<button (click)="onDoneClick()" mat-button>Done</button>
 		}
 		@else {
-			<button [mat-dialog-close]="false" mat-button>Cancel</button>
+			<button [mat-dialog-close]="{ wasCancelled: true }" mat-button>Cancel</button>
 			<button (click)="onSaveClick()" mat-button>Save</button>
 		}
 </mat-dialog-actions>
