all add/edit relationship logic in `InteractionsService`
- Dialog opening and result processing now lives in the `InteractionsService`.
  - This enables the add/edit relationship dialog to be opened from multiple components
    with less code duplication. It also abstracts away the format of the add/edit
    relationship flow - the component no longer needs to know it's dealing with a dialog.

- Relationship names on the Interactions page can now be clicked to open the Edit Relationship dialog.
  - In this case, logic was added to flag changes to a relationship’s name or interactions in
    the Edit Relationship dialog, so the Interactions page knows when and what to refresh.

- Interaction insertion functions added to new `InteractionsUtilitiesService` so these
  simple functions can be used in more services without causing circular dependencies.

--- a/src/app/components/relationship-dialog/relationship-dialog.component.html
+++ b/src/app/components/relationship-dialog/relationship-dialog.component.html
@@ -92,7 +92,7 @@
 
 <mat-dialog-actions>
 		@if (isFormSaved()) {
-			<button (click)="onDoneClick()" mat-button>Done</button>
+			<button (click)="closeDialog()" mat-button>Done</button>
 		}
 		@else {
 			<button [mat-dialog-close]="{ wasCancelled: true }" mat-button>Cancel</button>
